MB-39669: Handle Magma implicit compactions before warmup

ep-engine registers a callback with Magma to be notified of every item
being compacted. This allows ep-engine to check if the item should be
TTL-expired, or discarded as it is from a dropped collection.
However, ep-engine cannot deal with such compaction callbacks until
warmup has completed, as ep-engine must load various in-memory counts
(total items, per-collection counts) and have these available before
they can be decrented or similar during compaction.

However, magma can trigger it's internal (implicit) compactions any
time after the Magma instance has been Open()ed - potentially before
warmup. Currently this results in an exception being thrown in the
compaction callback and KV-Engine terminating:

    CRITICAL *** Fatal error encountered during exception handling ***
    CRITICAL Caught unhandled std::exception-derived exception. what(): MagmaKVStore::makeCompactionContext: Have not set makeCompactionContextCallback to create a compaction_ctx

To address this, relax the check for makeCompactionContextCallback
being set - if empty then simply return false from the compacton
callback.

This also defers when the "proper" makeCompactionContextCallback is
assigned to be once warmup is complete.

Change-Id: I4708e7c9784b513158f5007c0effca6b71495fa7
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/131368
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Ben Huddleston <ben.huddleston@couchbase.com>